--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 <div class="strip"></div>
                 <div class="strip"></div>
             </div>
-            <div class="navcard">
-                <div class="navcontain">
-                    <div class="navback"></div>
+            <div class="navcard">       
                     <ul class="navlist">
                         <li class="navitem"><a href="#greentech">Greentech</a></li>
                         <li class="navitem"><a href="#innovation">Featured Innovation</a></li>
@@ -32,7 +30,6 @@
                         <li class="navitem"><a href="#benefit">Benefit</a></li>
                         <li class="navitem"><a href="#tech">Technology</a></li>
                     </ul>
-                </div>
             </div>
             <div class="imgPage1"></div>
             <div class="p1HeadText" id="white">
@@ -60,9 +57,9 @@
                 <div class="textbox1">
                     <h2>Why Greentech Matter ?</h2>
                     <p id="heheheh">
-                        <span>Green Technology</span> is a branch of technology that focuses on the development and application 
-                        of products, systems and processes that use resources efficiently, 
-                        produce minimal environmental impact, promote long-term sustainability, reduce greenhouse gas emissions and pollution.
+                        By harnessing clean energy sources, reducing emissions, conserving resources, 
+                        and promoting eco-friendly innovation, <span>greentech</span> helps protect the planet while supporting economic growth and improving quality of life. It plays a vital role in transitioning industries and societies toward a lo-carbon future, ensuring that environmental 
+                        preservation and technological advancement go hand in hand for the benefit of current and future generations.
                     </p>
                 </div>    
             </div>
@@ -133,6 +130,8 @@
                             electric vehicles, and smart infrastructure. Key global agreements like the Kyoto Protocol and Paris Agreement drove cooperation, 
                             while recent advances such as AI for climate, 
                             green hydrogen, and circular economy practices are shaping a net-zero future
+                        </p>
+                        
                     </div>
                     
                 </div>
