--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="navcard">       
                     <ul class="navlist">
-                        <li class="navitem"><a href="#greentech">Greentech</a></li>
+                        <li class="navitem"><a href="#greentech">Greentechhh</a></li>
                         <li class="navitem"><a href="#innovation">Featured Innovation</a></li>
                         <li class="navitem"><a href="#h2his">History</a></li>
                         <li class="navitem"><a href="#benefit">Benefit</a></li>
