--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
     <body class="body1">
         
         <header class="page1Header">
-            <div class="navbutton">
-                <div class="strip"></div>
-                <div class="strip"></div>
-                <div class="strip"></div>
-            </div>
+            
             <div class="navcard">       
-                    <ul class="navlist">
-                        <li class="navitem"><a href="#greentech">Greentechhh</a></li>
-                        <li class="navitem"><a href="#innovation">Featured Innovation</a></li>
-                        <li class="navitem"><a href="#h2his">History</a></li>
-                        <li class="navitem"><a href="#benefit">Benefit</a></li>
-                        <li class="navitem"><a href="#tech">Technology</a></li>
-                    </ul>
+                <div class="navbutton">
+                    <div class="strip"></div>
+                    <div class="strip"></div>
+                    <div class="strip"></div>
+                </div>
+                <ul class="navlist">
+                    <li class="navitem"><a href="#greentech">Greentech</a></li>
+                    <li class="navitem"><a href="#innovation">Featured Innovation</a></li>
+                    <li class="navitem"><a href="#h2his">History</a></li>
+                    <li class="navitem"><a href="#benefit">Benefit</a></li>
+                    <li class="navitem"><a href="#tech">Technology</a></li>
+                </ul>
             </div>
             <div class="imgPage1"></div>
             <div class="p1HeadText" id="white">
@@ -65,6 +66,8 @@
             </div>
         </section>
 
+        <h2 id="sliderh2">Gerakan Greentech</h2>
+
         <div class="innovationContainer" id="innovation">
             <div class="slideInnovation Active">
                 <div class="slideContent">
@@ -75,6 +78,7 @@
                             It consists of solar cells (usually made from semiconductor materials like silicon) that capture sunlight and generate direct 
                             current (DC) electricity.
                         </p>
+                        <div class="slideButton">Learn More</div>
                     </div>
                     <div class="imgSlideContent">
                         <img src="styles/assets/solarpanel.jpg" alt="hehe" class="innovationImg">
