--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <title>GreenTech</title>
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/animate.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
         <script defer src="js/script.js"></script>
         
 
@@ -433,20 +435,38 @@
 
 
         <footer>
-            <div class="footerGrid">
-                <div class="gridEach">
-                    <h3>ABOUT</h3>
-                    <p>Text</p>
-                    <p>Text</p>
+            <div class="container-footer">
+
+                <div class="social-icons">
+                    <div class="title-icons">
+                         <h2>Follow Us</h2>
+                    </div>
+
+                    <div class="text-icons">
+                        <p>Ikuti kami di media sosial untuk update terbaru tentang teknologi ramah lingkungan dan inovasi dari Greentech.</p>
+                    </div>
+                      <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                      <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                      <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
-                <div class="gridEach">
-                    <h3>FOLLOW US</h3>
+
+                <div class="box-text-order1">
+                    <h2>About Us</h2>
+                    <p>-> Greentech</p>
+                    <p>-> Featured Innovation</p>
+                    <p>-> History</p>
+                    <p>-> Benefit</p>
+                    <P>-> Technology</P>
                 </div>
-                <div class="gridEach">
-                    <h3>CONTACT</h3>
-                    <p>user@gmail.com</p>
-                    <p>+62-811-2222-3333</p>
+
+                <div class="box-text-order1">
+                    <h2>Support</h2>
+                    <p>-> Contact us</p>
+                    <p>-> Communty</p>
                 </div>
+
+
             </div>
         </footer>
 
