Update layout benefit 90%

--- a/index.html
+++ b/index.html
@@ -150,36 +150,42 @@
 
 
 
-        <!-- CSS = line-488 sampai line-555  -->
-        <div class="benefit" id="benefit">
-            <h2>Benefit of Greentech</h2>
-            <div class="benrow">
-                <div class="bencard ">
-                    <div class="benimg environmental"></div>
-                    <h3>Environmental</h3>
-                    <p>Reduce pollution and conserve natural resources</p>
+        <!-- CSS = line-487 sampai line-530  -->
+        <div class="container-benefit">
+
+            <div class="title-benefit">
+                <h3>Benefit Of Greentech</h3>
+                <p>Ini yang kamu proleh dari mempelajari greentech</p>
+            </div>
+
+            <div class="box-card-benefit">
+
+                <div class="card-items-benefit">
+                    <img src="./styles/assets/environmentall.png" alt="">
+                    <h4>Evironmental</h4>
+                    <p>Reduce energy consumption and lower conts</p>
                 </div>
-                <div class="bencard">
-                    <div class="benimg energy"></div>
-                    <h3>Energy Efficiency</h3>
-                    <p>Reduce energy consumption and lower costs</p>
+
+                <div class="card-items-benefit">
+                    <img src="./styles/assets/economic.png" alt="">
+                    <h4>Economic</h4>
+                    <p>Pramate economic growth and job creation</p>
                 </div>
-                <div class="bencard">
-                    <div class="benimg economic"></div>
-                    <h3>Economic</h3>
-                    <p>Promote economic growth and job creation</p>
+
+                <div class="card-items-benefit">
+                    <img src="./styles/assets/QoL.png" alt="">
+                    <h4>Health and social</h4>
+                    <p>improve health autcomes and promate social equity</p>
                 </div>
-                <div class="bencard">
-                    <div class="benimg health"></div>
-                    <h3>Health and Social</h3>
-                    <p>Improve health outcomes and promote social equity</p>
+
+                <div class="card-items-benefit">
+                    <img src="./styles/assets/energy.png" alt="">
+                    <h4>Energy Efficiency</h4>
+                    <p>Reduce poliution and conserve natural resaurces</p>
                 </div>
+
             </div>
         </div>
-
-
-
-        <div class="thinBar"></div>
         
         <!-- CSS = line-559 sampai line-778  -->
         <div class="teknologi" id="tech">
