--- a/news.html
+++ b/news.html
@@ -34,47 +34,65 @@
             </div>
         </header>
 
-        <div class="news">
-            <div class="newsCont">
-                <div class="newsContent">
-                    <p>
-                        Kotabumi, 21 maret 2025 - Upaya dalam menyelamatkan bumi dari dampak krisis iklim maka
-                        membutuhkan peran aktif dari seluruh elemen masyarakat, termasuk kalangan pelajaran dan
-                        generasi muda. Menyadari akan seberapa pentingnya peran tersebut maka generasi muda di
-                        lampung berkerja sama dengan Duta Inisiatif Sebuah komunitas yang bertujuan untuk
-                        mengembangkan inisiatif-inisiatif yang menciptakan lingkungan yang lebih baik. dan bertugas
-                        untuk mengedukasi masyarakat luas tentang perubahan iklim dan isu-isu lingkungan
-                        lainnya. Menggelar kegiatana Road Show Di Universitas Muhamadiyah Kotabumi 
-                    </p>
-                    <p>
-                        Krisis lingkungan global seperti perubahan iklim, polusi, serta penurunan kualitas air dan udara
-                        telah mendorong banyak negara, lembaga, dan komunitas untuk mencari solusi berbasis
-                        teknologi yang ramah lingkungan. Green Technology (Green Tech) hadir sebagai solusi
-                        alternatif yang menjembatani kemajuan teknologi dengan pelestarian ekosistem.
-                    </p>
-                    <p>
-                        Pendidikan dan pengenalan konsep Green Tech sejak dini, terutama di kalangan pelajar dan
-                        generasi muda, menjadi strategi penting dalam membentuk pola pikir yang sadar akan
-                        pentingnya pembangunan berkelanjutan. Maka dari itu, kegiatan sosialisasi ini menjadi langkah
-                        awal untuk memperkenalkan berbagai bentuk teknologi hijau secara langsung dan aplikatif di
-                        lingkungan sekolah.
-                    </p>
-                    <p>
-                        Kegiatan yang bertajuk “Teknologi Hijau untuk Masa Depan Bumi” ini bertujuan untuk
-                        memperkenalkan konsep dan implementasi teknologi ramah lingkungan kepada para generasi muda,
-                        khususnya dari jurusan teknik dan ilmu komputer, yang kelak akan menjadi pelaku utama dalam
-                        pengembangan inovasi teknologi di masa depan.
-                    </p>
-                    <p>
-                        Road show ini di ikuti lebih dari 60 peserta dari jurusan fakultas sitem teknologi dan informasi,
-                        serta di hadiri oleh kaprodi fakultas sistem teknologi dan informasi. Dalam acara ini para
-                        peserta mendapatkan pemahaman tentang konsep green tech serta penggunaan energy
-                        terbarukan, pengelolaan limbah berbasiis teknologi, serta pengembangan produk ramah
-                        lingkungan 
-                    </p>
+
+        <section class="newsMain">
+            <div class="sidenav">
+                <ul class="navsidelist">
+                    <li class="navitem"><a href="#greentech">Greentech</a></li>
+                    <li class="navitem"><a href="#innovation">Featured Innovation</a></li>
+                    <li class="navitem"><a href="#h2his">History</a></li>
+                    <li class="navitem"><a href="#benefit">Benefit</a></li>
+                    <li class="navitem"><a href="#tech">Technology</a></li>
+                </ul>
+            </div>
+            <div class="news">
+                <div class="newsCont">
+                    <div class="newsContent">
+                        <p>
+                            Kotabumi, 21 maret 2025 - Upaya dalam menyelamatkan bumi dari dampak krisis iklim maka
+                            membutuhkan peran aktif dari seluruh elemen masyarakat, termasuk kalangan pelajaran dan
+                            generasi muda. Menyadari akan seberapa pentingnya peran tersebut maka generasi muda di
+                            lampung berkerja sama dengan Duta Inisiatif Sebuah komunitas yang bertujuan untuk
+                            mengembangkan inisiatif-inisiatif yang menciptakan lingkungan yang lebih baik. dan bertugas
+                            untuk mengedukasi masyarakat luas tentang perubahan iklim dan isu-isu lingkungan
+                            lainnya. Menggelar kegiatana Road Show Di Universitas Muhamadiyah Kotabumi 
+                        </p>
+                        <p>
+                            Krisis lingkungan global seperti perubahan iklim, polusi, serta penurunan kualitas air dan udara
+                            telah mendorong banyak negara, lembaga, dan komunitas untuk mencari solusi berbasis
+                            teknologi yang ramah lingkungan. Green Technology (Green Tech) hadir sebagai solusi
+                            alternatif yang menjembatani kemajuan teknologi dengan pelestarian ekosistem.
+                        </p>
+                        <p>
+                            Pendidikan dan pengenalan konsep Green Tech sejak dini, terutama di kalangan pelajar dan
+                            generasi muda, menjadi strategi penting dalam membentuk pola pikir yang sadar akan
+                            pentingnya pembangunan berkelanjutan. Maka dari itu, kegiatan sosialisasi ini menjadi langkah
+                            awal untuk memperkenalkan berbagai bentuk teknologi hijau secara langsung dan aplikatif di
+                            lingkungan sekolah.
+                        </p>
+                        <p>
+                            Kegiatan yang bertajuk “Teknologi Hijau untuk Masa Depan Bumi” ini bertujuan untuk
+                            memperkenalkan konsep dan implementasi teknologi ramah lingkungan kepada para generasi muda,
+                            khususnya dari jurusan teknik dan ilmu komputer, yang kelak akan menjadi pelaku utama dalam
+                            pengembangan inovasi teknologi di masa depan.
+                        </p>
+                        <p>
+                            Road show ini di ikuti lebih dari 60 peserta dari jurusan fakultas sitem teknologi dan informasi,
+                            serta di hadiri oleh kaprodi fakultas sistem teknologi dan informasi. Dalam acara ini para
+                            peserta mendapatkan pemahaman tentang konsep green tech serta penggunaan energy
+                            terbarukan, pengelolaan limbah berbasiis teknologi, serta pengembangan produk ramah
+                            lingkungan 
+                        </p>
+                        <p>
+                            Sebagai ketua pelaksana Indri Kirani Nurlita menyampaikan bahwa kegiatan yang beratjuk pada
+                            green tech ini di landasi oleh semangat untuk memperkenanlkan dan mengajak untuk
+                            mengimplementasikan Green Technology atau Teknologi Hijau kepada generasi muda ataupun para
+                            mahasiswa 
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <footer>
             <div class="container-footer">
