--- a/news.html
+++ b/news.html
@@ -17,22 +17,23 @@
 
     </head>
     <body>
-        <header class="navcontainer">
-            <div class="navcard">       
-                <div class="navbutton">
-                    <div class="strip"></div>
-                    <div class="strip"></div>
-                    <div class="strip"></div>
+        <section class="navSegmentss">
+            <div class="nav-left">
+                <div class="nav-strip-btn">
+                    <div class="nav-strip"></div>
+                    <div class="nav-strip"></div>
+                    <div class="nav-strip"></div>
                 </div>
-                <ul class="navlist">
-                    <li class="navitem"><a href="#greentech">Greentech</a></li>
-                    <li class="navitem"><a href="#innovation">Featured Innovation</a></li>
-                    <li class="navitem"><a href="#h2his">History</a></li>
-                    <li class="navitem"><a href="#benefit">Benefit</a></li>
-                    <li class="navitem"><a href="#tech">Technology</a></li>
-                </ul>
+                <div class="nav-circle"></div>
             </div>
-        </header>
+            <div class="nav-middle">
+
+            </div>
+            <div class="nav-right">
+
+            </div>
+        </section>
+        
 
 
         <section class="newsMain">
@@ -44,8 +45,14 @@
                     <li class="navitem"><a href="#benefit">Benefit</a></li>
                     <li class="navitem"><a href="#tech">Technology</a></li>
                 </ul>
+                <div class="pattern">
+                    
+                </div>
             </div>
             <div class="news">
+                <div class="news-head">
+
+                </div>
                 <div class="newsCont">
                     <div class="newsContent">
                         <p>
