--- a/index.html
+++ b/index.html
@@ -192,13 +192,39 @@
         
         <!-- CSS = line-559 sampai line-778  -->
         <section class="technology">
+            <h2 id="h2his"> Technology</h2>
             <div class="reenergy">
                 <div class="techTextBox">
-
+                    <h2>Renewable Energy Technologies</h2>
+                    <p class="subtext">
+                        Renewable energy technologies harness natural resources like sunlight, wind, water, and geothermal heat to generate clean energy. 
+                        These technologies are essential for reducing greenhouse gas emissions, combating climate change, and transitioning to a sustainable energy future. 
+                        They include solar panels, wind turbines, hydropower systems, and geothermal power plants.
+                    </p>
                 </div>
-                <div class="techImg reenergy">
-                    
+                <div class="techImg1"></div>
+            </div>
+            <div class="reenergy">
+                <div class="techTextBox">
+                    <h2>Renewable Energy Technologies</h2>
+                    <p class="subtext">
+                        Renewable energy technologies harness natural resources like sunlight, wind, water, and geothermal heat to generate clean energy. 
+                        These technologies are essential for reducing greenhouse gas emissions, combating climate change, and transitioning to a sustainable energy future. 
+                        They include solar panels, wind turbines, hydropower systems, and geothermal power plants.
+                    </p>
                 </div>
+                <div class="techImg1"></div>
+            </div>
+            <div class="reenergy">
+                <div class="techTextBox">
+                    <h2>Renewable Energy Technologies</h2>
+                    <p class="subtext">
+                        Renewable energy technologies harness natural resources like sunlight, wind, water, and geothermal heat to generate clean energy. 
+                        These technologies are essential for reducing greenhouse gas emissions, combating climate change, and transitioning to a sustainable energy future. 
+                        They include solar panels, wind turbines, hydropower systems, and geothermal power plants.
+                    </p>
+                </div>
+                <div class="techImg1"></div>
             </div>
         </section>
 
