--- a/index.html
+++ b/index.html
@@ -215,6 +215,56 @@
                 </div>
                 <div class="techImg2"></div>
             </div>
+
+             <div class="techSegment">
+                <div class="techTextBox">
+                    <h2>Recycling Technologies</h2>
+                   <p class="subtext">
+                        Energy storage refers to methods of storing excess electricity for later use, especially important for renewable sources like solar and
+                        wind, which don't produce power consistently. Common storage systems include batteries (like lithium-ion), pumped hydro, thermal
+                        storage, and compressed air. These systems help balance supply and demand, improve energy reliability, and reduce
+                        dependence on fossil fuels.
+                    </p>
+                </div>
+                <div class="techImg2"></div>
+            </div>
+
+             <div class="techSegment">
+                <div class="techTextBox">
+                    <h2>Energy Storage Technologies</h2>
+                   <p class="subtext">
+                        Energy storage refers to methods of storing excess electricity for later use, especially important for renewable sources like solar and
+                        wind, which don't produce power consistently. Common storage systems include batteries (like lithium-ion), pumped hydro, thermal
+                        storage, and compressed air. These systems help balance supply and demand, improve energy reliability, and reduce dependence
+                        on fossil fuels.
+                    </p>
+                </div>
+                <div class="techImg2"></div>
+            </div>
+
+            <div class="techSegment">
+                <div class="techTextBox">
+                    <h2>Eco-transportation</h2>
+                   <p class="subtext">
+                       Eco-transportation refers to sustainable and environmentally friendly transportation methods that aim to reduce carbon emissions
+                       and promote energy efficiency. This includes electric vehicles,  public transportation, cycling, and walking, as well as innovations like
+                       hyperloop and flying taxis.
+                    </p>
+                </div>
+                <div class="techImg2"></div>
+            </div>
+
+            <div class="techSegment">
+                <div class="techTextBox">
+                    <h2>Water Conservation Technologies</h2>
+                   <p class="subtext">
+                        Water conservation technologies are methods and systems designed to efficiently use, manage, and preserve water resources. These
+                        technologies aim to reduce water waste, improve water quality, and ensure sustainable water supply for various uses, including
+                        agriculture, industry, and domestic consumption.
+                    </p>
+                </div>
+                <div class="techImg2"></div>
+            </div>
         </section>
 
 
