--- a/news.html
+++ b/news.html
@@ -56,45 +56,103 @@
                 <div class="newsCont">
                     <div class="newsContent">
                         <p>
-                            Kotabumi, 21 maret 2025 - Upaya dalam menyelamatkan bumi dari dampak krisis iklim maka
-                            membutuhkan peran aktif dari seluruh elemen masyarakat, termasuk kalangan pelajaran dan
-                            generasi muda. Menyadari akan seberapa pentingnya peran tersebut maka generasi muda di
-                            lampung berkerja sama dengan Duta Inisiatif Sebuah komunitas yang bertujuan untuk
-                            mengembangkan inisiatif-inisiatif yang menciptakan lingkungan yang lebih baik. dan bertugas
-                            untuk mengedukasi masyarakat luas tentang perubahan iklim dan isu-isu lingkungan
-                            lainnya. Menggelar kegiatana Road Show Di Universitas Muhamadiyah Kotabumi 
+                            Kotabumi, 21 maret 2025 - Upaya dalam menyelamatkan bumi dari dampak krisis iklim maka membutuhkan peran aktif dari seluruh 
+                            elemen masyarakat, termasuk kalangan pelajaran dan generasi muda. 
+                            Menyadari akan seberapa pentingnya peran tersebut maka generasi muda di lampung berkerja sama dengan Duta Inisiatif Sebuah 
+                            komunitas yang bertujuan untuk mengembangkan inisiatif-inisiatif yang menciptakan lingkungan yang lebih baik. 
+                            dan bertugas untuk mengedukasi masyarakat luas tentang perubahan iklim dan isu-isu lingkungan
+                            lainnya. Menggelar kegiatana Road Show Di Universitas Muhamadiyah Kotabumi.
+                        </p>
+                        <p id="p">
+                            Krisis lingkungan global seperti perubahan iklim, polusi, serta penurunan kualitas air dan udara telah mendorong banyak negara, 
+                            lembaga, dan komunitas untuk mencari solusi berbasis teknologi yang ramah lingkungan. 
+                            Green Technology (Green Tech) hadir sebagai solusi alternatif yang menjembatani kemajuan teknologi dengan pelestarian ekosistem.
                         </p>
                         <p>
-                            Krisis lingkungan global seperti perubahan iklim, polusi, serta penurunan kualitas air dan udara
-                            telah mendorong banyak negara, lembaga, dan komunitas untuk mencari solusi berbasis
-                            teknologi yang ramah lingkungan. Green Technology (Green Tech) hadir sebagai solusi
-                            alternatif yang menjembatani kemajuan teknologi dengan pelestarian ekosistem.
+                            Pendidikan dan pengenalan konsep Green Tech sejak dini, terutama di kalangan pelajar dan generasi muda, 
+                            menjadi strategi penting dalam membentuk pola pikir yang sadar akan pentingnya pembangunan berkelanjutan. 
+                            Maka dari itu, kegiatan sosialisasi ini menjadi langkah awal untuk memperkenalkan berbagai bentuk teknologi 
+                            hijau secara langsung dan aplikatif di lingkungan sekolah.
                         </p>
                         <p>
-                            Pendidikan dan pengenalan konsep Green Tech sejak dini, terutama di kalangan pelajar dan
-                            generasi muda, menjadi strategi penting dalam membentuk pola pikir yang sadar akan
-                            pentingnya pembangunan berkelanjutan. Maka dari itu, kegiatan sosialisasi ini menjadi langkah
-                            awal untuk memperkenalkan berbagai bentuk teknologi hijau secara langsung dan aplikatif di
-                            lingkungan sekolah.
+                            Kegiatan yang bertajuk “Teknologi Hijau untuk Masa Depan Bumi” ini bertujuan untuk memperkenalkan konsep dan implementasi 
+                            teknologi ramah lingkungan kepada para generasi muda, khususnya dari jurusan teknik dan ilmu komputer, 
+                            yang kelak akan menjadi pelaku utama dalam pengembangan inovasi teknologi di masa depan.
                         </p>
                         <p>
-                            Kegiatan yang bertajuk “Teknologi Hijau untuk Masa Depan Bumi” ini bertujuan untuk
-                            memperkenalkan konsep dan implementasi teknologi ramah lingkungan kepada para generasi muda,
-                            khususnya dari jurusan teknik dan ilmu komputer, yang kelak akan menjadi pelaku utama dalam
-                            pengembangan inovasi teknologi di masa depan.
+                            Road show ini di ikuti lebih dari 60 peserta dari jurusan fakultas sitem teknologi dan informasi, 
+                            serta di hadiri oleh kaprodi fakultas sistem teknologi dan informasi. Dalam acara ini para peserta mendapatkan 
+                            pemahaman tentang konsep green tech serta penggunaan energy terbarukan, 
+                            pengelolaan limbah berbasiis teknologi, serta pengembangan produk ramah lingkungan
+                        </p>
+                        <p id="p">
+                            Sebagai ketua pelaksana Indri Kirani Nurlita menyampaikan bahwa kegiatan yang beratjuk pada green tech ini di landasi 
+                            oleh semangat untuk memperkenanlkan dan 
+                            mengajak untuk mengimplementasikan Green Technology atau Teknologi Hijau kepada generasi muda ataupun para mahasiswa
                         </p>
                         <p>
-                            Road show ini di ikuti lebih dari 60 peserta dari jurusan fakultas sitem teknologi dan informasi,
-                            serta di hadiri oleh kaprodi fakultas sistem teknologi dan informasi. Dalam acara ini para
-                            peserta mendapatkan pemahaman tentang konsep green tech serta penggunaan energy
-                            terbarukan, pengelolaan limbah berbasiis teknologi, serta pengembangan produk ramah
-                            lingkungan 
+                            Green tech merupakan pendekataan teknologi yang menitikberatkan pada prinsip keberlanjutan, efisiensi energi, 
+                            dan minimnya dampak negatif terhadap lingkungan. Dalam kegiatan road show kali ini kami 
+                            mengangkat isu lingkungan yang relevan dan menawarkan solusi nyata berbasis teknologi
+                        </p>
+                        <ul id="p">
+                            <li class="listPoint">
+                                <span class="bold">Energy terbaharukan</span>, termasuk tenaga surya dan tenaga angin.
+                            </li>
+                            <li class="listPoint">
+                                <span class="bold">Pengolahan dan daur ulang limbah</span>, termasuk pemisahan sampah dan daur ulang plastik.
+                            </li>
+                            <li class="listPoint">
+                                <span class="bold">Transportasi ramah lingkungan</span>, seperti penggunaan kendaraan listrik dan transportasi umum.
+                            </li>
+                            <li class="listPoint">
+                                <span class="bold">Pertanian pintar</span>, termasuk penggunaan teknologi untuk meningkatkan hasil pertanian dan mengurangi dampak lingkungan.
+                            </li>
+                            <li class="listPoint">
+                                <span class="bold">Kajian dan solusi terhadap bencana lingkungan</span>, seperti kasus lumpur 
+                                lapindo yang menjadi contoh nyata dampak industri terhadap 
+                                lingkungan dan pentingnya inovasi dan teknologi untuk mitigasi dan pemulihan kawasan terdampak
+                            </li>
+                        </ul>
+                        <p>
+                            kami yakin bahwa kolaborasi antara dunia pendidikan, komunitas , dan 
+                            teknologi akan melahirkan inovasi-inovasi hijau yang mampu menjawab tantangan masa depan.
+                        </p>
+                        <p id="p">
+                            tidak hanya pemaparan materi kegiatan ini juga di rancang secara interaktif dan edukatif para peserta di ajak untuk berdiskusi 
+                            dan saling berbagi pemahaman, 
+                            pengalaman, serta ketertarikan mereka terhadap penerapan teknologi ramah lingkungan. Diskusi ini menjadi ruang terbuka bagi 
+                            para peserta untuk menggali ruang ide dan solusi bersama.
                         </p>
                         <p>
-                            Sebagai ketua pelaksana Indri Kirani Nurlita menyampaikan bahwa kegiatan yang beratjuk pada
-                            green tech ini di landasi oleh semangat untuk memperkenanlkan dan mengajak untuk
-                            mengimplementasikan Green Technology atau Teknologi Hijau kepada generasi muda ataupun para
-                            mahasiswa 
+                            Kegiatan road show ini mendapat sambutan positif dari para peserta. 
+                            Banyak mahasiswa yang merasa kegiatan ini membuka wawasan baru 
+                            mengenai teknologi hijau yang sebelumnya hanya mereka kenal sebatas teori di bangku kuliah.
+                        </p>
+                        <p>
+                            Salah satu peserta, Rizky Pratama, mahasiswa jurusan Sistem Informasi, mengungkapkan bahwa 
+                            kegiatan ini membuatnya lebih termotivasi untuk mengembangkan ide proyek berbasis energi terbarukan.
+                            “Materinya sangat relevan dengan tantangan zaman sekarang. Saya jadi berpikir untuk mengembangkan aplikasi 
+                            monitoring penggunaan energi ramah lingkungan yang bisa dipakai di rumah tangga,” ujarnya.
+                        </p>
+                        <p id="p">
+                            Selain itu, para peserta juga mengapresiasi sesi diskusi interaktif, di mana mereka dapat menyampaikan ide-ide terkait 
+                            pengelolaan limbah, 
+                            penggunaan kendaraan listrik, serta konsep smart farming yang berkelanjutan.
+                        </p>
+                        <p>
+                            Panitia berharap kegiatan ini dapat menjadi pemicu gerakan hijau yang lebih luas di Lampung, khususnya 
+                            di kalangan pelajar dan mahasiswa. Dalam waktu dekat, Duta Inisiatif berencana menjalin kerja sama dengan sekolah-sekolah menengah di Kotabumi untuk mengadakan program serupa, 
+                            sehingga pengetahuan tentang teknologi hijau dapat menyentuh generasi yang lebih muda.
+                        </p>
+                        <p id="p">
+                            Kegiatan seperti ini juga diharapkan bisa menjadi agenda rutin tahunan yang terus berkembang, tidak hanya dalam bentuk sosialisasi, 
+                            tetapi juga penelitian, pengabdian masyarakat, hingga program wirausaha berbasis teknologi ramah lingkungan.
+                        </p>
+                        <p>
+                            Road show “Teknologi Hijau untuk Masa Depan Bumi” membuktikan bahwa perubahan besar selalu dimulai dari langkah kecil. 
+                            Dengan melibatkan mahasiswa sebagai agen perubahan, diharapkan akan muncul generasi yang siap membawa Lampung, bahkan Indonesia, 
+                            menuju masa depan yang lebih hijau, berkelanjutan, dan sejahtera.
                         </p>
                     </div>
                 </div>
