anim benefit anim teknologi

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="p1HeadText" id="white">
                 <div>
                     <h1 id="white" class="headh1">GreenTech</h1>
-                    <p id="heheheh">
+                    <p id="heheheh" class="phead">
                         Green Technology is a branch of technology that focuses on the development and application 
                         of products, systems and processes that use resources efficiently, 
                         produce minimal environmental impact, promote long-term sustainability, reduce greenhouse gas emissions and pollution.
@@ -79,13 +79,13 @@
             <div class="box-card-benefit">
 
                 <div class="card-items-benefit">
-                    <img src="./styles/assets/environmentall.png" width="150px" height="120px" alt="">
+                    <img src="./styles/assets/environmentall.png"alt="">
                     <h4>Evironmental</h4>
                     <p>Reduce energy consumption and lower costs</p>
                 </div>
 
                 <div class="card-items-benefit">
-                    <img src="./styles/assets/economic.png" width="150px" height="120px" alt="">
+                    <img src="./styles/assets/economic.png" alt="">
                     <h4>Economic</h4>
                     <p>Pramate economic growth and job creation</p>
                 </div>
@@ -241,7 +241,7 @@
                     </div>
 
                     <div class="text-icons">
-                        <p>Ikuti kami di media sosial untuk update terbaru tentang teknologi ramah lingkungan dan inovasi dari Greentech.</p>
+                        <p class="textfot">Ikuti kami di media sosial untuk update terbaru tentang teknologi ramah lingkungan dan inovasi dari Greentech.</p>
                     </div>
                       <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
                       <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -251,17 +251,17 @@
 
                 <div class="box-text-order1">
                     <h2>About Us</h2>
-                    <p>-> Greentech</p>
-                    <p>-> Featured Innovation</p>
-                    <p>-> History</p>
-                    <p>-> Benefit</p>
-                    <P>-> Technology</P>
+                    <p class="textfot">-> Greentech</p>
+                    <p class="textfot">-> Featured Innovation</p>
+                    <p class="textfot">-> History</p>
+                    <p class="textfot">-> Benefit</p>
+                    <P class="textfot">-> Technology</P>
                 </div>
 
                 <div class="box-text-order1">
                     <h2>Support</h2>
-                    <p>-> Contact us</p>
-                    <p>-> Communty</p>
+                    <p class="textfot">-> Contact us</p>
+                    <p class="textfot">-> Communty</p>
                 </div>
 
 
